lpprof (0.2.0+c9+1) calibre9; urgency=medium

  * Backport calibre9

 -- Pierre Trespeuch <pierre-externe.trespeuch@edf.fr>  Wed, 31 Jan 2018 17:24:05 +0100

lpprof (0.2.0) unstable; urgency=medium

  * Change metric unit of vectorization metrics to %
  * Correct spank plugin error caused by race condition happening while making result directories
  * Correct a problem occuring when only the last rank was profiled
  * Correct copyright and rules
  * Correct incoherent metric min/max values
  * Correct a bug brougth by last commit
  * Correct spank plugin that was not working when executable was specified as <subdir>/<exe>
  * Display help when not argument is given to lpprof
  * Change option names to conform to posix guidelines and update doc and man accordingly
  * Correct debian package dependencies
  * Correct a potential acces to unknown key in metrics dictionnary
  * Add debian package cleaning

 -- Pierre Trespeuch <pierre-externe.trespeuch@edf.fr>  Tue, 16 Jan 2018 10:40:58 +0100

lpprof (0.1.2) unstable; urgency=medium

  * Correct perf pids driven commands that weren't monitoring the first pid as they should
  * Correct spank plugin, sort pids and make sure to get back in job submission directory

 -- Pierre Trespeuch <pierre-externe.trespeuch@edf.fr>  Fri, 22 Dec 2017 09:36:26 +0100

lpprof (0.1.1) unstable; urgency=medium

  * Add a Makefile to build spank plugin share library
  * Add extented description to Debian package
  * Correct Spank plugin Makefile
  * Update documentation
  * Correct a problem occuring when lpprof_r option is not used
  * Correct README
  * Correct spank plugin

 -- Pierre Trespeuch <pierre-externe.trespeuch@edf.fr>  Wed, 20 Dec 2017 15:12:13 +0100

lpprof (0.1.0) unstable; urgency=medium

  * Initial release.

 -- Pierre TRESPEUCH <pierre-externe.trespeuch@edf.fr>  Thu, 05 Oct 2017 09:10:09 +0000