@@ -1,8 +1,16 @@
-lpprof (0.2.0+c9+1) calibre9; urgency=medium
+lpprof (0.2.1+c9+1) calibre9; urgency=medium
 
-  * Backport calibre9
+  * Correct lpprof-spank control file
+  * Change result directory name if SLURM_JOB_ID env variable is set
+  * Improve synchronization when using spank plugin
+  * Remove launcher option choice to enable launcher with arguments
+  * Add Ghz and CPUs-utilized metrics
+  * Weight symbols with cpu utilization and add cpu idle ratio to symbols usage summary
+  * Correct lpprof command when used in interactive mode
+  * Increment output directory name suffix when multiple srun are launched for the same JOBID
+  * Handle interactive cases when number of tasks are not precised
 
- -- Pierre Trespeuch <pierre-externe.trespeuch@edf.fr>  Wed, 31 Jan 2018 17:24:05 +0100
+ -- Pierre Trespeuch <pierre-externe.trespeuch@edf.fr>  Fri, 16 Feb 2018 19:14:57 +0100
 
 lpprof (0.2.0) unstable; urgency=medium
 
